@@ -1437,9 +1437,9 @@ static int FDECL1(padblock_write, FILE *, outfile)
       if (! fp)
 	error (1, errno, _("Unable to open %s"), boot_image_embed);
 
-      if (fread (buffer, 2048 * PADBLOCK_SIZE, 1, fp) == 0)
-	error (1, errno, _("cannot read %llu bytes from %s"),
-	       (size_t) (2048 * PADBLOCK_SIZE), boot_image_embed);
+      if (fread (buffer, 1, 2048 * PADBLOCK_SIZE, fp) == 0)
+	error (1, errno, _("cannot read %d bytes from %s"),
+	       2048 * PADBLOCK_SIZE, boot_image_embed);
       if (fgetc (fp) != EOF)
 	error (1, 0, _("%s is too big for embed area"), boot_image_embed);
     }
